--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(65deg, #0D967E 0%, #020000 100%);
+    background: linear-gradient(65deg, #16cfad 0%, #020000 100%);
 }
 
 * {
@@ -47,9 +47,15 @@ a {
 }
 
 .left-panel>ul>li:hover {
-    background-color: #0D967E;
+    background-color: #000000;
+    color: #0D967E;
     transition: background-color 1s ease;
 }
+
+.left-panel>ul>li:hover a{
+    color: #0D967E;
+}
+
 
 .right-panel>ul>li:hover {
     background-color: #0D967E;
@@ -73,6 +79,19 @@ a {
 
     .burger-menu {
         display: block;
+    }
+
+    .drop-menu {
+        display: none;
+    }
+
+    .drop-menu.open {
+        display: block;
+    }
+
+    .drop-menu.open>ul>li{
+        padding: 10px;
+        padding-right: 60px;
     }
 
     .burger-menu>button {
