--- a/public/css/blog/blog.css
+++ b/public/css/blog/blog.css
@@ -66,4 +66,15 @@
         padding: 0;
     }
 
+    .blog-icon{
+        display: none;
+    }
+
+}
+
+@media(max-width:400px){
+    .blog-main-container{
+        margin-inline: 0;
+        width: 100%;
+    }
 }
