--- a/public/css/blog/blog.css
+++ b/public/css/blog/blog.css
@@ -42,7 +42,8 @@
     background: linear-gradient(195deg, #16cfad 0%, #020000 100%);
 }
 
-.add-blog-container>button {
+.add-blog-container>.blog-btns>.add-btn,
+.filter-btn {
     padding: 15px;
     padding-inline: 5px;
     border: none;
@@ -52,10 +53,26 @@
     color: #16cfad;
 }
 
-.add-blog-container>button:hover {
+.blog-btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.add-blog-container>.blog-btns>button:hover {
     background-color: #16cfad;
     color: black;
     transition: background-color 1s ease;
+}
+
+.add-blog-container>.blog-btns>.filter-btn {
+    color: #000000;
+}
+
+.add-blog-container>.blog-btns>.filter-btn:hover {
+    background-color: #000000;
+    color: #16cfad;
+    ;
 }
 
 
@@ -106,13 +123,13 @@ select {
     height: 90px;
 }
 
-.leave-btn{
-    display:flex;
+.leave-btn {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.leave-btn>p{
+.leave-btn>p {
     margin-bottom: 6px;
     color: #16cfad;
     cursor: pointer;
@@ -136,6 +153,17 @@ select {
     transition: background-color 1s ease;
 }
 
+/* ///////////// */
+
+#myFilter {
+    background: linear-gradient(65deg, #16cfad 0%, #020000 100%);
+    position: absolute;
+    padding: 1rem;
+    left: 72%;
+    top: 22%;
+    display: none;
+}
+
 @media(max-width:880px) {
     #myForm {
         padding: 0.7rem;
@@ -152,6 +180,10 @@ select {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 16px;
         height: 25px;
+    }
+
+    #myFilter {
+        left: 68%;
     }
 }
 
@@ -191,6 +223,10 @@ select {
         font-size: 16px;
         height: 25px;
     }
+
+    #myFilter {
+        left: 60%;
+    }
 }
 
 @media(max-width:690px) {
@@ -220,6 +256,16 @@ select {
 }
 
 @media(max-width:400px) {
+
+    .blog-card {
+        margin: 0;
+        width: 100%;
+
+    }
+}
+
+@media(max-width:490px) {
+
     .blog-main-container {
         margin-inline: 0;
         width: 100%;
